# dddbase

./: main.py  pyproject.toml
app/domain/user/: user_repository.py
app/infrastructure/elasticsearch/user/: __init__.py  user_query_service.py  user_repository.py
app/routers/: user.py
app/usecase/user/: __init__.py  user_query_model.py  user_query_service.py  user_query_usecase.py
