[tool.poetry]
name = "dddbase"
version = "0.1.0"
description = ""
authors = ["Harry"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.19.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
